@@ -11,6 +11,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -45,17 +46,29 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>3.0.0-M5</version>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; Fork JVM for test execution &ndash;&gt;-->
+<!--                    <forkCount>1</forkCount> &lt;!&ndash; Ensure tests run in separate JVMs for better isolation &ndash;&gt;-->
+<!--                    <reuseForks>true</reuseForks> &lt;!&ndash; Reuse forks to optimize performance &ndash;&gt;-->
+<!--                    &lt;!&ndash; Optional: Limit the memory allocation if necessary to avoid JVM crashes &ndash;&gt;-->
+<!--                    <argLine>-Xmx2g -XX:MaxPermSize=512m</argLine>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.12</version>
                 <executions>
                     <execution>
-                        <!--id выбираешь самостоятельно-->
                         <id>prepare-agent</id>
-                        <!--в какой фазе maven будет выполняться цель-->
                         <phase>initialize</phase>
-                        <!--цель jacoco, которую нужно выполнить-->
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -66,6 +79,10 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+<!--                        <configuration>-->
+<!--                            <dataFile>F:/coverage-reports/jacoco.exec</dataFile>-->
+<!--                            <outputDirectory>F:/coverage-reports</outputDirectory>-->
+<!--                        </configuration>-->
                     </execution>
                 </executions>
             </plugin>
